--- a/IT AUTOMATION/.vscode/settings.json
+++ b/IT AUTOMATION/.vscode/settings.json
@@ -1,6 +1,13 @@
 {
     "cSpell.words": [
+        "Buzo",
         "catpics",
+        "Dani",
+        "Meenu",
+        "Myattribute",
+        "Myclass",
+        "myname",
+        "myobject",
         "srini"
     ]
 }
