--- a/IT AUTOMATION/.vscode/settings.json
+++ b/IT AUTOMATION/.vscode/settings.json
@@ -8,6 +8,8 @@
         "Myclass",
         "myname",
         "myobject",
-        "srini"
+        "openpyxl",
+        "srini",
+        "vlookup"
     ]
 }
