my code and learnings

--- a/IT AUTOMATION/.vscode/settings.json
+++ b/IT AUTOMATION/.vscode/settings.json
@@ -1,14 +1,17 @@
 {
     "cSpell.words": [
+        "adgc",
         "Buzo",
         "catpics",
         "Dani",
         "Meenu",
+        "mfidmz",
         "Myattribute",
         "Myclass",
         "myname",
         "myobject",
         "openpyxl",
+        "softwaregrp",
         "srini",
         "vlookup"
     ]
