--- a/IT AUTOMATION/.vscode/settings.json
+++ b/IT AUTOMATION/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Buzo",
         "catpics",
         "Dani",
+        "Fortan",
         "Meenu",
         "mfidmz",
         "Myattribute",
