--- a/IT AUTOMATION/.vscode/settings.json
+++ b/IT AUTOMATION/.vscode/settings.json
@@ -7,6 +7,7 @@
         "Fortan",
         "Meenu",
         "mfidmz",
+        "microfocus",
         "Myattribute",
         "Myclass",
         "myname",
